--- a/DOM/project_on_github/project.html
+++ b/DOM/project_on_github/project.html
@@ -2,26 +2,50 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="project.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="project.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/brands.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 
 <body>
+  <div class="container">
+    <div class=" nav" id="navbar">
+      <div class="one">
+        <h1><i class="fa-solid fa-upload"></i></h1>
+      </div>
+      <div class="two">
+        <h1><i class="fa-brands fa-servicestack"></i></h1>
+      </div>
+      <div class="three">
+        <h1><i class="fa-solid fa-user"></i></i></h1>
+      </div>
+      <div class="four">
+        <h1><i class="fa-etch fa-solid fa-house"></i></h1>
+      </div>
+      <div class="five">
+        <h1><i class="fa-etch fa-solid fa-phone"></i></h1>
+      </div>
+      <div class="six">
+        <h1><i class="fa-etch fa-solid fa-location-dot"></i></h1>
+      </div>
+    </div>
+  </div>
 
-    <!-- <input type="checkbox" id="dark-mode" class="input">
+  <!-- <input type="checkbox" id="dark-mode" class="input">
     <lable for="dark-mode" class="lable">
         <div class="circle">
         </div>
     </lable> -->
 
-        <input type="checkbox" id="dark-mode" class="input" >
-    <label for="dark-mode" class="label">
-      <div class="circle">
-      </div>
-    </label>
-    <script src="project.js"></script>
+  <input type="checkbox" id="dark-mode" class="input">
+  <label for="dark-mode" class="label">
+    <div class="circle">
+    </div>
+  </label>
+  <script src="project.js"></script>
 </body>
 
 </html>
